...
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="access_token">pk.eyJ1IjoiemhhbnNoZW5sYyIsImEiOiJjam5xbzhrc3EwMXBzM3FwZzV0NGVldHZzIn0.2ctOrMOocoEvual8xPWXNA</string>

    <!-- Layout Strings -->
    <string name="coinz_logo">Coinz logo</string>
    <string name="user_icon">User icon</string>
    <string name="hint_name">Name</string>
    <string name="hint_name_new">New Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_new">New Password</string>
    <string name="hint_password_old">Old Password</string>
    <string name="hint_password_confirm">Confirm New Password</string>
    <string name="hint_year">YYYY</string>
    <string name="hint_month">MM</string>
    <string name="hint_day">DD</string>
    <string name="login">Sign in</string>
    <string name="register">No account yet? Create one!</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Already a member? Login</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="reset_button">Send Reset Email</string>
    <string name="change_name_button">Change Name</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="enter_date">Please enter a date</string>
    <string name="search_button">Search</string>
...
    <string name="received_coins_title">Received Coins</string>

    <!-- Image Descriptions -->
    <string name="inBank_description">Bank in</string>
    <string name="purchase_description">Purchase</string>
    <string name="send_description">Send to friend</string>
    <string name="add_friend_description">Add a friend</string>
    <string name="remove_friend_description">Remove a friend</string>
    <string name="open_nav_description">Open navigation drawer</string>
    <string name="shop_description">Shop</string>
    <string name="userIcon_description">User icon</string>

    <!-- Examples -->
    <string name="coinID_example">abcd-efgh-ijkl-mnop</string>
    <string name="coinValue_example">1.234567890</string>
...
