...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFriendActivity"
    android:background="@drawable/img2">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_addFriend"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/addFriend_title"
...
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/addFriendbtn_addFriend"
        android:contentDescription="@string/add_friend_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
...
